# rust-parallel-runner

./: Cargo.toml  README.md  shell.nix
examples/: number.rs
src/: lib.rs
