[package]
name = "parallel-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.9.1"
log = "0.4.17"
parking_lot = "0.12.1"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

[dev-dependencies]
rand = "0.8.5"
